Remove the BubbleFrameView close button from tab traversal on all platforms.

The button defaults to FocusBehavior::ACCESSIBLE_ONLY which (apart from
on Mac) only affects buttons in AccessiblePaneViews (which the close
button is not). Make it FocusBehavior::NEVER so the behaviour is
consistent across platforms.

Note this does not affect screen readers' ability to focus the element.
Keyboard access to this element when not using a screen reader is done
via the ESC key handler in DialogClientView.

BUG=741251

Review-Url: https://codereview.chromium.org/2982533002
Cr-Commit-Position: refs/heads/master@{#486228}

Former-commit-id: 5602cce8dce523ac65415a36db784361d80a6074